--- a/solution/src/main/resources/application.yml
+++ b/solution/src/main/resources/application.yml
@@ -7,10 +7,13 @@ spring:
     username: postgres
     password: root
     driver-class-name: org.postgresql.Driver
-
   liquibase:
     url: jdbc:postgresql://localhost:5432/postgres
     user: postgres
     password: root
     driver-class-name: org.postgresql.Driver
     enabled: false
+
+  jpa:
+    hibernate:
+      ddl-auto: update
